[gd_scene load_steps=11 format=3 uid="uid://30jb4kc5kf5p"]

[ext_resource type="PackedScene" uid="uid://bv1ul1qynrdwd" path="res://GameBoard/Cursor/Cursor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://d4mhjq651egt" path="res://Units/Unit.tscn" id="2"]
[ext_resource type="Script" path="res://GameBoard/GameBoard.gd" id="3"]
[ext_resource type="Resource" path="res://GameBoard/Grid.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://n825j345khoi" path="res://UnitOverlay/UnitOverlay.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://dxyfefsgkgc4l" path="res://GameBoard/UnitPath.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://ceanoo0yxcj8i" path="res://Units/squirrel.png" id="7"]
[ext_resource type="Texture2D" uid="uid://don6rhlapjhye" path="res://Units/bear.png" id="8"]
[ext_resource type="Texture2D" uid="uid://x4kxxdinjx3r" path="res://Units/bugcat.png" id="9"]
[ext_resource type="PackedScene" uid="uid://de53ukdqyusan" path="res://Background/Map.tscn" id="10"]

[node name="Main" type="Node2D"]
rotation = -0.00195814

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("3")
grid = ExtResource("4")

[node name="Map" parent="GameBoard" instance=ExtResource("10")]
layer_0/tile_data = PackedInt32Array(-65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 65534, 0, 0, 65535, 0, 0, 16, 0, 0, 17, 0, 0, 131070, 0, 0, 131071, 262146, 0, 65552, 0, 0, 65553, 0, 0, 196606, 0, 0, 196607, 0, 0, 131088, 0, 0, 131089, 0, 0, 262142, 0, 0, 262143, 0, 0, 196624, 0, 0, 196625, 0, 0, 327678, 0, 0, 327679, 0, 0, 262160, 0, 0, 262161, 0, 0, 393214, 0, 0, 393215, 0, 0, 327696, 0, 0, 327697, 0, 0, 458750, 0, 0, 458751, 0, 0, 393232, 0, 0, 393233, 0, 0, 524286, 0, 0, 524287, 0, 0, 458768, 393216, 1, 458769, 0, 0, 589822, 0, 0, 589823, 0, 0, 524304, 0, 0, 524305, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 262146, 0, 589825, 0, 0, 589826, 0, 0, 589827, 65536, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 131072, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 15, 0, 0, 14, 0, 0, 13, 0, 0, 12, 0, 0, 11, 0, 0, 10, 0, 0, 9, 0, 0, 8, 0, 0, 65541, 262146, 0, 65540, 262146, 0, 65539, 262146, 0, 65538, 262146, 0, 65537, 262146, 0, 65536, 262146, 0, 65542, 262146, 0, 65543, 262146, 0, 65544, 262146, 0, 65545, 262146, 0, 65546, 262146, 0, 65547, 262146, 0, 65548, 262146, 0, 65549, 262146, 0, 65550, 0, 0, 65551, 0, 0, 131087, 0, 0, 131086, 196609, 0, 131085, 196608, 1, 131084, 196609, 0, 131083, 196609, 0, 131082, 196608, 1, 131081, 196609, 0, 131080, 0, 0, 131079, 0, 0, 131078, 131072, 0, 131077, 0, 0, 131076, 262146, 0, 131075, 327680, 2, 131074, 327680, 1, 131073, 262144, 2, 131072, 262146, 0, 196608, 262146, 0, 196609, 196608, 2, 196610, 65536, 0, 196611, 196608, 2, 262147, 327680, 3, 262148, 0, 0, 196612, 262146, 0, 196613, 0, 0, 196614, 0, 1, 196615, 65536, 1, 196616, 131072, 1, 196617, 196609, 0, 196618, 196608, 2, 196619, 196609, 0, 196620, 196609, 0, 196621, 196608, 2, 196622, 196609, 0, 196623, 0, 0, 262159, 0, 0, 262158, 196609, 0, 262157, 196608, 2, 262156, 196609, 0, 262155, 196609, 0, 262154, 196608, 2, 262153, 196609, 0, 262152, 131072, 2, 262151, 65536, 2, 262150, 0, 2, 262149, 0, 0, 262146, 327680, 1, 262145, 262144, 3, 262144, 262146, 0, 327680, 262146, 0, 327681, 262146, 0, 327682, 262146, 0, 327683, 262146, 0, 327684, 262146, 0, 327685, 131072, 0, 327686, 0, 3, 327687, 65536, 3, 327688, 131072, 3, 327689, 196609, 0, 327690, 196608, 2, 327691, 196609, 0, 327695, 0, 0, 327694, 196609, 0, 327693, 196608, 2, 327692, 196609, 0, 393229, 196608, 2, 393230, 196609, 0, 393231, 0, 0, 393228, 196609, 0, 393227, 196609, 0, 393226, 196608, 2, 393225, 196609, 0, 393224, 65536, 0, 393223, 65536, 0, 393222, 65536, 0, 393221, 0, 0, 393220, 65536, 0, 393219, 0, 0, 393218, 0, 0, 393217, 0, 0, 393216, 262146, 0, 458752, 262146, 0, 458753, 0, 0, 458754, 65536, 0, 458755, 131072, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 262144, 1, 458760, 327680, 1, 458761, 327680, 1, 458762, 327680, 3, 458763, 262146, 0, 458764, 262146, 0, 458765, 262144, 3, 458766, 327680, 1, 458767, 327680, 1, 524303, 0, 0, 524302, 0, 0, 524301, 0, 0, 524300, 0, 0, 524299, 0, 0, 524298, 131072, 0, 524297, 0, 0, 524296, 0, 0, 524295, 0, 0, 524294, 65536, 0, 524293, 0, 0, 524292, 0, 0, 524291, 0, 0, 524290, 0, 0, 524289, 0, 0, 524288, 262146, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 65557, 0, 0, 131093, 0, 0, 196629, 0, 0, 262165, 0, 0, 327701, 0, 0, 393237, 0, 0, 458773, 0, 0, 524309, 0, 0, 589845, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 851989, 0, 0, 917525, 0, 0, 983061, 0, 0, 1048597, 0, 0, 1114133, 0, 0, 1179669, 0, 0, 1245205, 0, 0, 1310741, 0, 0, 1310740, 0, 0, 1310739, 0, 0, 1310738, 0, 0, 1310737, 0, 0, 1310736, 0, 0, 1310735, 0, 0, 1376271, 0, 0, 1376270, 0, 0, 1376269, 0, 0, 1376268, 0, 0, 1376267, 0, 0, 1376266, 0, 0, 1376265, 0, 0, 1376264, 0, 0, 1376263, 0, 0, 1376262, 0, 0, 1376261, 0, 0, 1376260, 0, 0, 1310734, 0, 0, 1310733, 0, 0, 1310732, 0, 0, 1310731, 0, 0, 1310730, 0, 0, 1310729, 0, 0, 1310728, 0, 0, 1310727, 0, 0, 1310726, 0, 0, 1310725, 0, 0, 1310724, 0, 0, 1310723, 0, 0, 1310722, 0, 0, 1310721, 0, 0, 1310720, 0, 0, 1245184, 0, 0, 1179648, 0, 0, 1114112, 0, 0, 1048576, 0, 0, 983040, 0, 0, 917504, 0, 0, 851968, 0, 0, 786432, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 655380, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 131091, 0, 0, 131090, 0, 0, 131092, 0, 0, 196628, 0, 0, 196627, 0, 0, 196626, 0, 0, 262164, 0, 0, 262163, 0, 0, 262162, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 393235, 0, 0, 393234, 0, 0, 393236, 0, 0, 458772, 0, 0, 458771, 0, 0, 458770, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 589844, 0, 0, 589843, 0, 0, 589842, 0, 0, 655378, 0, 0, 655379, 0, 0, 720916, 0, 0, 786451, 0, 0, 851987, 0, 0, 917523, 0, 0, 851988, 0, 0, 786452, 0, 0, 917524, 0, 0, 983060, 0, 0, 1048596, 0, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 0, 1245203, 0, 0, 1245202, 0, 0, 1245201, 0, 0, 1245200, 0, 0, 1245199, 0, 0, 1245198, 0, 0, 1245197, 0, 0, 1245196, 0, 0, 1245195, 0, 0, 1245194, 0, 0, 1245193, 0, 0, 1245192, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1179655, 0, 0, 1179654, 0, 0, 1179653, 0, 0, 1179652, 0, 0, 1114115, 0, 0, 1114114, 0, 0, 1048578, 0, 0, 983041, 0, 0, 917505, 0, 0, 851969, 0, 0, 786433, 0, 0, 1048577, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 983042, 0, 0, 917506, 0, 0, 851970, 0, 0, 786434, 0, 0, 786435, 0, 0, 851971, 0, 0, 917507, 0, 0, 983043, 0, 0, 1048579, 0, 0, 1179651, 0, 0, 1179650, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1048595, 0, 0, 983059, 0, 0, 1179667, 0, 0, 1179666, 0, 0, 1179665, 0, 0, 1179664, 0, 0, 1179663, 0, 0, 1179662, 0, 0, 1179661, 0, 0, 1179660, 0, 0, 1179659, 0, 0, 1179658, 0, 0, 1179657, 0, 0, 1179656, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 983058, 0, 0, 983057, 0, 0, 983056, 0, 0, 983055, 0, 0, 983054, 0, 0, 1048590, 0, 0, 1048589, 0, 0, 1048588, 0, 0, 1048587, 0, 0, 1048586, 0, 0, 1048585, 0, 0, 1048584, 0, 0, 1114117, 0, 0, 1114116, 0, 0, 1048580, 0, 0, 983044, 0, 0, 917509, 0, 0, 851973, 0, 0, 851972, 0, 0, 786436, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 786449, 0, 0, 786450, 0, 0, 786448, 0, 0, 786440, 0, 0, 786439, 0, 0, 786438, 0, 0, 786437, 0, 0, 917508, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 917522, 0, 0, 851986, 0, 0, 917520, 0, 0, 917519, 0, 0, 917518, 0, 0, 917517, 0, 0, 917516, 0, 0, 917515, 0, 0, 917514, 0, 0, 917513, 0, 0, 917512, 0, 0, 917511, 0, 0, 917510, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048581, 0, 0, 1048591, 0, 0, 917521, 0, 0, 786444, 0, 0, 786443, 0, 0, 786442, 0, 0, 786441, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786430, 0, 0, 786431, 0, 0, 851967, 0, 0, 851966, 0, 0, 917502, 0, 0, 983038, 0, 0, 1048574, 0, 0, 917503, 0, 0, 983039, 0, 0, 1048575, 0, 0, 1114111, 0, 0, 1179647, 0, 0, 1245183, 0, 0, 1310719, 0, 0, 1376255, 0, 0, 1376254, 0, 0, 1310718, 0, 0, 1245182, 0, 0, 1179646, 0, 0, 1114110, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, -65515, 0, 0, -131051, 0, 0, -131052, 0, 0, -131053, 0, 0, -131054, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0)

[node name="UnitOverlay" parent="GameBoard" instance=ExtResource("5")]

[node name="UnitPath" parent="GameBoard" instance=ExtResource("6")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("1")]

[node name="Bear" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(607.419, 297.19)
move_range = 3
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[node name="Cat" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(543.294, 361.065)
move_range = 4
skin = ExtResource("9")
skin_offset = Vector2(5, 12)

[node name="Squirrel" parent="GameBoard" instance=ExtResource("2")]
position = Vector2(671.294, 361.315)
move_range = 5
skin = ExtResource("7")
skin_offset = Vector2(6, 17)

[node name="Enemy1" parent="GameBoard" instance=ExtResource("2")]
modulate = Color(1, 0, 0, 1)
position = Vector2(349.289, 363.685)
move_range = 3
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[node name="Enemy2" parent="GameBoard" instance=ExtResource("2")]
modulate = Color(1, 0, 0, 1)
position = Vector2(265.289, 363.52)
move_range = 3
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[node name="Enemy3" parent="GameBoard" instance=ExtResource("2")]
modulate = Color(1, 0, 0, 1)
position = Vector2(129.297, 359.254)
move_range = 3
skin = ExtResource("8")
skin_offset = Vector2(2, 9)

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_Cursor_moved"]
